--- a/src/components/products/Card.module.scss
+++ b/src/components/products/Card.module.scss
@@ -1,3 +1,5 @@
+@use "../../scss/mixins";
+
 .div {
   width: 300px;
   height: 400px;
@@ -5,6 +7,12 @@
   padding: 1rem;
   border-radius: 1rem;
   transition: all 0.2s ease-in;
+
+  @include mixins.media-lg {
+    width: 100%;
+    height: 70%;
+    margin: 1rem;
+  }
 
   &:hover {
     box-shadow: 0px 0px 10px black;
